<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.LoginActivity"
    android:background="@drawable/bg_dark"
    >
    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_marginTop="200dp"
        android:src="@drawable/logo_horoscopes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/app_name"
        android:contentDescription="@string/horoscope_logo_image" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/horoscope"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        app:layout_constraintBottom_toTopOf="@id/app_name"
        app:layout_constraintEnd_toEndOf="@id/logo_image"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="@id/logo_image"
        app:layout_constraintTop_toBottomOf="@id/logo_image" />

    <TextView
        android:id="@+id/app_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/terms_condition"
        android:padding="35dp"
        android:textSize="12sp"
        android:textColor="@color/white"
        android:background="@android:color/transparent"
        android:gravity="center_horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <TextView
        android:id="@+id/signIn_btn"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:text="@string/sign_in"
        android:gravity="center_vertical"
        android:textAlignment="center"
        android:padding="10dp"
        android:textColor="@color/purple_700"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:background="@drawable/bg_btn"
        app:layout_constraintTop_toBottomOf="@id/app_name"
        app:layout_constraintStart_toStartOf="@id/app_name"
        app:layout_constraintEnd_toEndOf="@id/app_name"

        app:drawableStartCompat="@drawable/google_ic"
        tools:ignore="RtlCompat" />
</androidx.constraintlayout.widget.ConstraintLayout>