<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".Activity.ProfileActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/ud_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        app:titleTextColor="@color/white"
        app:title="@string/app_name"
        android:background="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ud_toolbar"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/ud_toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
    >

    <EditText
        android:id="@+id/user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/EditTextLayout"
        android:hint="@string/what_is_your_name"
        android:textColor="@color/white"
        android:inputType="text"
                />

    <RadioGroup
        android:id="@+id/user_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:checkedButton="@id/male"
        android:orientation="horizontal"
        android:background="@android:color/transparent"
        app:layout_constraintTop_toBottomOf="@id/user_name">
        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:text="Gender"
            android:paddingVertical="12dp"
            android:paddingRight="8dp"
            android:textColor="@color/white"
            android:background="@android:color/transparent"
            android:textSize="16sp"
            />
        <RadioButton
            android:id="@+id/male"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="Male"
            android:padding="10dp"
            android:textStyle="bold"
            app:buttonTint="@color/white"
            />
        <RadioButton
            android:id="@+id/female"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="Female"
            android:padding="10dp"
            app:buttonTint="@color/white"
            />

    </RadioGroup>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@android:color/transparent"
        android:orientation="horizontal">
    <TextView
        android:id="@+id/date_picker"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:text="@string/select_your_date_of_birth"
        android:textStyle="bold"
        android:background="@android:color/transparent"
        android:paddingVertical="12dp"
        app:layout_constraintTop_toBottomOf="@id/user_gender"
        app:layout_constraintStart_toStartOf="parent"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/datePickerButton"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="01/01/1992"
        android:textSize="16sp"
        android:textStyle="bold"
        android:backgroundTint="@android:color/transparent"
        android:textColor="@color/white"
        android:layout_marginEnd="5dp"
        style="?attr/spinnerStyle"
        android:onClick="openDatePicker"
        />
    </LinearLayout>
    <EditText
        android:id="@+id/user_place"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/where_were_you_born"
        android:textColorHint="@color/white"
        android:inputType="text"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/date_picker"
        />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/submitBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:fontFamily="sans-serif-smallcaps"
        android:textSize="16sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:strokeWidth="2dp"
        app:cornerRadius="12dp"
        app:strokeColor="@color/white"
        android:backgroundTint="@color/purple_500"
        android:layout_marginTop="20dp"
        android:padding="15dp"
        android:text="Submit"
        app:layout_constraintTop_toBottomOf="@id/user_place"
        />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>