<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    tools:context=".Activity.HoroscopeDetailActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/purple_500"
        android:elevation="5dp"
        app:layout_constraintTop_toTopOf="parent"
        app:titleTextColor="@color/white" />

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/appbar_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="visible"
        app:layout_constraintTop_toBottomOf="@id/toolbar">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/transparent"
            android:elevation="1dp">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="@color/purple_500"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/your_daily_horoscope_is_ready"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/zodiacSignDetail" />

                    <RelativeLayout
                        android:id="@+id/zodiacSignDetail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:background="@drawable/bg_text"
                        android:padding="12dp">

                        <ImageView
                            android:id="@+id/zodiacSignImg"
                            android:layout_width="80dp"
                            android:layout_height="80dp"
                            android:background="@color/white"
                            android:contentDescription="@string/zodiac_sign"
                            android:padding="5dp"
                            />

                        <TextView
                            android:id="@+id/zodiacSignTitle"
                            android:layout_width="80dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/zodiacSignImg"
                            android:layout_marginTop="5dp"
                            android:background="@drawable/bg_text"
                            android:paddingStart="5dp"
                            android:paddingEnd="5dp"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/luckyNumber"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/zodiacSignTitle"
                            android:text="Lucky Number"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_toEndOf="@id/luckyNumber"
                            android:text="Lucky Time"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/zodiacNumber"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/luckyNumber"
                            android:layout_marginTop="3dp"
                            android:layout_toEndOf="@id/zodiacSignImg"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/zodiacTime"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/luckyNumber"
                            android:layout_marginTop="3dp"
                            android:layout_toEndOf="@id/luckyNumber"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/luckyColor"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/zodiacNumber"
                            android:layout_marginTop="20dp"
                            android:layout_toEndOf="@id/zodiacSignImg"
                            android:text="Lucky Colours"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/colorName"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/luckyColor"
                            android:layout_marginTop="3dp"
                            android:layout_toEndOf="@id/zodiacSignImg"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/moodSign"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/zodiacTime"
                            android:layout_marginTop="20dp"
                            android:layout_toEndOf="@id/luckyColor"
                            android:text="Mood of day"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/Mood"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_below="@id/moodSign"
                            android:layout_marginTop="3dp"
                            android:layout_toEndOf="@id/colorName"
                            android:textAlignment="center"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold" />
                    </RelativeLayout>

                    <TextView
                        android:id="@+id/date"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:layout_marginBottom="8dp"
                        android:background="@drawable/bg_text"
                        android:gravity="center_horizontal"
                        android:padding="5dp"
                        android:text="@string/date"
                        android:textAlignment="center"
                        android:textColor="@color/white"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        app:layout_constraintTop_toBottomOf="@id/zodiacSignDetail" />
                </LinearLayout>
            </com.google.android.material.appbar.CollapsingToolbarLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabLayout_days"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:textStyle="bold"
                app:contentScrim="@android:color/transparent"
                app:fontFamily="sans-serif-light"
                app:tabBackground="@color/purple_500"
                app:tabGravity="fill"
                app:tabIndicatorColor="@color/white"
                app:tabIndicatorHeight="2dp"
                app:tabSelectedTextColor="@color/design_default_color_background"
                app:tabTextAppearance="@style/TextAppearance.AppCompat.Medium"
                app:tabTextColor="#AEFFFFFF">

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/yesterday_TI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Yesterday" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/today_TI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Today" />

                <com.google.android.material.tabs.TabItem
                    android:id="@+id/tomorrow_TI"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tomorrow" />
            </com.google.android.material.tabs.TabLayout>

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/vp"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:paddingEnd="10dp"
                android:contentDescription="@string/view_pager"
                app:layout_behavior="@string/appbar_scrolling_view_behavior"
                app:layout_constraintTop_toBottomOf="@id/tabLayout_days" />

            <RelativeLayout
                android:id="@+id/banner"
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:visibility="gone"
                app:layout_constraintTop_toBottomOf="@id/vp">

                <ImageView
                    android:id="@+id/ads_image"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/bg_text" />

                <TextView
                    android:layout_width="35dp"
                    android:layout_height="20dp"
                    android:layout_alignParentEnd="true"
                    android:background="@color/white"
                    android:elevation="0.1dp"
                    android:paddingStart="10dp"
                    android:rotation="34"
                    android:text="Ad"
                    android:textColor="@color/black"
                    android:textSize="12sp"
                    android:textStyle="bold" />
            </RelativeLayout>
        </com.google.android.material.appbar.AppBarLayout>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:indeterminateTint="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />
</androidx.constraintlayout.widget.ConstraintLayout>

