<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/purple_700"
    android:padding="12dp"
    tools:context=".Activity.BirthDetailsActivity">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textAlignment="center"
        android:layout_marginTop="30dp"
        android:padding="20dp"
        android:text="@string/birth_details"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <LinearLayout
        android:id="@+id/birth_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/bg_text"
        android:padding="10dp"
        app:layout_constraintTop_toBottomOf="@id/title"
        >
        <LinearLayout
            android:id="@+id/user_details"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:theme="@style/LayoutTheme"

            android:orientation="horizontal"
            android:weightSum="2"
            >
        <TextView
            android:id="@+id/username"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Name"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="12dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/name"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Kusum"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="12dp"
            android:layout_weight="1"
            />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/user_gender"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >
        <TextView
            android:id="@+id/Gender"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Gender"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:padding="12dp"
            android:layout_weight="1"
            />
        <TextView
            android:id="@+id/fetch_gender"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/female"
            android:textStyle="bold"
            android:padding="12dp"
            android:layout_weight="1"
            />
        </LinearLayout>
       <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
           android:theme="@style/LayoutTheme"
           android:weightSum="2"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Date"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/DOB"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="1 January 1992"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_weight="1"
                />
        </LinearLayout>
      <!--  <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:theme="@style/LayoutTheme"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Time"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="01:47 PM"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_weight="1"
                />
        </LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Place"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/place"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="New Delhi"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:theme="@style/LayoutTheme"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Sign"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_weight="1"
                />
            <TextView
                android:id="@+id/zodiac_signs"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Aries"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:weightSum="2"
            >
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="Timezone"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_weight="1"
                />
            <TextView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:text="GMT+5.5"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:padding="12dp"
                android:layout_weight="1"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/editProfile"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:theme="@style/LayoutTheme"
            android:weightSum="2"
            >

            <TextView
                android:id="@+id/editBirthDetails"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@color/purple_500"
                android:drawableStart="@drawable/ic_edit_note"
                android:padding="12dp"
                android:textAlignment="center"
                android:text="@string/change_birth_details"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintTop_toBottomOf="@id/birth_details" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>